fixed details cast alignment

--- a/src/components/DetailsCast/details-cast.scss
+++ b/src/components/DetailsCast/details-cast.scss
@@ -12,6 +12,7 @@
   &__list {
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 0.5rem;
   }
 
